--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "postcss tailwind.css -o dist/css/styles.css",
-    "watch": "postcss tailwind.css -o dist/css/styles.css --watch"
+    "build": "tailwindcss -i tailwind.css -o ./dist/output.css",
+    "watch": "tailwindcss -i tailwind.css -o ./dist/output.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +12,12 @@
   "dependencies": {
     "autoprefixer": "^10.4.11",
     "cssnano": "^5.1.13",
-    "postcss-cli": "^10.0.0",
-    "tailwindcss": "^3.1.8"
+    "postcss-cli": "^10.0.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "postcss": "^8.4.16",
+    "tailwindcss": "^3.2.4",
     "tailwindcss-debug-screens": "^2.2.1"
   },
   "description": ""
